Switch from HHVM Xenon to php7-excimer and improve documentation
=== Summary of changes

* arclamp-collect: Prevent flush from fataling a request.

  During the temporary traffic switch to the secondary DC, latency to Redis
  naturally increased. Where normally we lost less than 10 samples per month,
  we now lost one or two per day. While still quite acceptable at our scale,
  it shouldn't cause fatal errors when it happens.

  The timeout didn't actually come from connect(), which actually just
  returns false if connection times out. Rather, the exception came from
  Redis::publish(), which throws if the socket read after a 'publish'
  command times out.

* arclamp-collect: Fix first frame for destructor call stacks.

* arclamp-log: Make Redis subscription channel configurable and support running
  multiple instances side-by-side.

* build: Create composer-test entry point with basic PHP linting.

=== Full change log

* https://github.com/wikimedia/operations-mediawiki-config/commits/bfa8bb69c1/wmf-config/profiler.php
* https://github.com/wikimedia/operations-mediawiki-config/commits/bfa8bb69c1/wmf-config/arclamp.php
* https://github.com/wikimedia/puppet/commits/fe5e47fff4/modules/arclamp

Bug: T200109
Change-Id: I040a162836e629b7369644cada8785f541d3401c

--- a/arclamp-log.yaml
+++ b/arclamp-log.yaml
@@ -1,11 +1,12 @@
-base_path: /srv/xenon/logs
+base_path: /srv/arclamp/logs
 logs:
   - format: "%Y-%m-%d_%H"
     period: hourly
-    retain: 24
+    # 336 hourly files = 14 days * 24 hourly files
+    retain: 336
   - format: "%Y-%m-%d"
     period: daily
-    retain: 30
+    retain: 45
 redis:
   host: "127.0.0.1"
   port: 6379
