--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,34 @@
 {
     "name": "wikimedia/arc-lamp",
-    "description": "Log processor for HHVM's Xenon extension",
-    "keywords": [ "HHVM", "profiling", "xenon" ],
+    "description": "Flame graphs and log processing for PHP stack traces.",
+    "keywords": [ "sampling", "profiling", "performance", "flamegraph", "excimer" ],
     "license": "Apache-2.0",
     "authors": [
         {
             "name": "Ori Livneh",
             "email": "ori@wikimedia.org"
+        },
+        {
+            "name": "Timo Tijhof",
+            "email": "krinklemail@gmail.com"
         }
     ],
-    "require": {
-        "hhvm": ">=3.0.0",
-        "ext-redis": "*"
-    },
     "autoload": {
         "files": [ "ArcLamp.php" ]
+    },
+    "require": {
+        "php": ">=7.2.0",
+        "ext-redis": "*"
+    },
+    "require-dev": {
+        "jakub-onderka/php-parallel-lint": "1.0.0"
+    },
+    "scripts": {
+        "test": "parallel-lint . --exclude vendor"
+    },
+    "config": {
+        "platform": {
+            "ext-redis": "3.1.1"
+        }
     }
 }
