--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,18 @@
         "ext-redis": "*"
     },
     "require-dev": {
-        "php-parallel-lint/php-parallel-lint": "1.2.0"
+        "mediawiki/minus-x": "1.1.1",
+        "php-parallel-lint/php-console-highlighter": "0.5.0",
+        "php-parallel-lint/php-parallel-lint": "1.3.0"
     },
     "scripts": {
-        "test": "parallel-lint . --exclude vendor"
+        "test": [
+            "parallel-lint . --exclude vendor",
+            "minus-x check ."
+        ],
+        "fix": [
+            "minus-x fix ."
+        ]
     },
     "config": {
         "platform": {
