build: Mark flamegraph.pl as vendored for repo language stats
Avoid the repo being marked as "Perl" on sites that use linguist, such
as GitHub (and GitLab).

Also, while at it, update the gitattributes to use stricter root-bound
configuration (otherwise matches anywhere), and use the new wildcard
pattern as used in other Wikimedia already (changes to our default
template pending at https://gerrit.wikimedia.org/r/705028/

https://github.com/github/linguist/blob/v7.15.0/docs/overrides.md#vendored-code

Change-Id: I980aaff9414def355a04807643122af0684b5ab9

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
-.gitattributes export-ignore
-.gitignore export-ignore
-.gitreview export-ignore
-composer.json export-ignore
+/.* export-ignore
+/composer.json export-ignore
+
+# This large file will otherwise classify the repo as a Perl project.
+# https://github.com/github/linguist/blob/v7.15.0/docs/overrides.md
+/flamegraph.pl linguist-vendored
