ArcLamp.php: Apply misc Wikimedia Foundation changes since 2019
Apply numerous changes that we've tested in our production
configuration, as freely available at
<https://gerrit.wikimedia.org/g/operations/mediawiki-config/+/5cd9403d66a36d519a51c8633f71a1cac9f3e04f/src/Profiler.php>.

* Add statsd integration, optional.

* Fix bad "Exception" reference.

* Limit sampling to web requests (not CLI). At WMF, we previously
  had different php.ini config for web and CLI, where ArcLamp.php
  was only required in the auto_prepend_file for web requests.
  We now include it on the CLI as well, which uncovered a need to
  disable the sampling profiler there. Do this automatically.

* Remove configurability of redis pubsub channel. There can now be
  multiple channels. The default name continues to match what
  arclamp scripts expect. In the recommended setup with a dedicated
  Redis server, this should not conflict.

* Remove "toobig" filter, matching Idada37613.

The code is considered short enough and stable to be safe to fork and
inline as-needed (as we do at WMF).

Bug: T337873
Change-Id: I9347430a4beb2e17011a514fcd16b7df1c3bc468

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		},
 		{
 			"name": "Timo Tijhof",
-			"email": "krinklemail@gmail.com"
+			"email": "krinkle@fastmail.com"
 		}
 	],
 	"autoload": {
@@ -25,7 +25,7 @@
 		]
 	},
 	"require": {
-		"php": ">=7.2.0",
+		"php": ">=7.4.0",
 		"ext-redis": "*"
 	},
 	"require-dev": {
